files/iptables-base.rules
*raw
:PREROUTING ACCEPT [126:17882]
:OUTPUT ACCEPT [103:12543]
-A PREROUTING ! -i docker0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j CT --notrack
-A PREROUTING ! -i docker0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j CT --notrack
COMMIT
*mangle
:PREROUTING ACCEPT [102:16188]
:INPUT ACCEPT [124:17596]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [103:12543]
:POSTROUTING ACCEPT [105:12829]
-A PREROUTING -i lo -j ACCEPT
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A PREROUTING -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,PSH,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A PREROUTING -m addrtype --dst-type BROADCAST -j DROP
-A PREROUTING -m addrtype --dst-type MULTICAST -j DROP
-A PREROUTING -m addrtype --dst-type ANYCAST -j DROP
-A PREROUTING -s 224.0.0.0/3 -j DROP
-A PREROUTING -s 127.0.0.0/8 ! -i lo -j DROP
-A PREROUTING -f -j DROP
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [103:12543]
:internal - [0:0]
:blocklists - [0:0]
:external - [0:0]
-A INPUT -i docker0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j internal
-A INPUT -j blocklists
-A INPUT -j external
-A INPUT -j DROP
-A external -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A external -p tcp -m multiport --dports 60022,443 -m conntrack --ctstate INVALID,UNTRACKED -j SYNPROXY --sack-perm --timestamp --wscale 7 --mss 1460
-A external -p tcp -m conntrack --ctstate INVALID -j DROP
-A external -p tcp -m multiport --dports 60022,443 -j ACCEPT
COMMIT
